--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="deepdive.cnm.edu.megamillions.controller.MainActivity">
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/action_clear"
     android:orderInCategory="100"
-    android:title="@string/action_settings"
+    android:title="@string/clear"
     app:showAsAction="never"/>
 </menu>
